[package]
name = "ledger_decryption_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  
aes-gcm = "0.10"  # For AES-GCM decryption  
generic-array = "0.14" 
hex = "0.4"        # For hex encoding  
rand = "0.8"       # For random number generation  
secp256k1 = { version = "0.24", features = ["rand", "recovery", "std"] }  # For using secp256k1 cryptography
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"   
hmac = "0.12"
sha2 = "0.10"
